--- a/index.html
+++ b/index.html
@@ -6,175 +6,8 @@
   <title>Live Karaoke Paris — Sing with a Live Band</title>
   <meta name="description" content="Live Karaoke Paris: sing your favorite songs with a live band in a fun, professional, nightlife atmosphere. Join the stage!" />
   <meta name="theme-color" content="#0b0b12" />
-  
-  <!-- Embedded CSS -->
-  <style>
-    :root{
-  --bg: #0b0b12;          /* deep night */
-  --bg-2: #12121b;        /* card background */
-  --text: #f2f5f8;        /* primary text */
-  --muted: #b8c0cc;       /* secondary text */
-  /* Palette: purple ↔ pink */
-  --pink: #ff3d6e;
-  --purple: #7a2cff;
-  --accent-start: var(--pink);
-  --accent-end: var(--purple);
-  --focus: #ff8bd1;       /* accessible neon ring */
-  --maxw: 1100px;
-  --radius: 16px;
-  --shadow-lg: 0 20px 50px rgba(0,0,0,.5);
-  --shadow-md: 0 10px 30px rgba(0,0,0,.35);
-}
-
-    /* Reset-ish */
-    *,*::before,*::after{ box-sizing:border-box; }
-    html{ scroll-behavior:smooth; }
-    body{
-      margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, "Helvetica Neue", Arial, "Apple Color Emoji","Segoe UI Emoji";
-      background: var(--bg);
-      color:var(--text);
-      line-height:1.6;
-    }
-
-    img{ max-width:100%; display:block; height:auto; }
-    a{ color:inherit; text-decoration:none; }
-    :focus-visible{ outline: 3px solid var(--focus); outline-offset: 3px; border-radius: 6px; }
-
-    /* Layout helpers */
-    .container{ max-width: var(--maxw); margin-inline:auto; padding: clamp(16px, 2vw, 24px); }
-    .center{ text-align:center; }
-    .stack{ display:grid; gap: clamp(14px, 2vw, 18px); }
-    .section{ padding: clamp(48px, 7vw, 96px) 0; }
-
-    /* Neon gradient utilities */
-    .neon-text{
-  /* Purple-pink neon mix, darker & punchy */
-  background: linear-gradient(90deg, #ff3d6e 0%, #c13cff 45%, #7a2cff 100%);
-  -webkit-background-clip: text; background-clip: text; color: transparent;
-  text-shadow: 0 0 12px rgba(255,61,110,.35), 0 0 18px rgba(122,44,255,.28);
-}
-    .btn{
-  --padx: clamp(18px, 3vw, 28px);
-  --pady: clamp(10px, 1.8vw, 14px);
-  display:inline-flex; align-items:center; justify-content:center; gap:.6rem;
-  padding: var(--pady) var(--padx);
-  font-weight: 700; letter-spacing: .3px; border: 0; border-radius: 999px; cursor:pointer;
-  background: linear-gradient(135deg, var(--accent-start), var(--accent-end));
-  color:#fff; box-shadow: 0 10px 30px rgba(122,44,255,.28), 0 6px 18px rgba(255,61,110,.25);
-  transition: transform .18s ease, box-shadow .18s ease, filter .18s ease, background .18s ease;
-}
-    .btn:hover{ transform: translateY(-2px); filter: brightness(1.05); background: linear-gradient(135deg, var(--accent-end), var(--accent-start)); box-shadow: 0 16px 40px rgba(122,44,255,.36), 0 8px 24px rgba(255,61,110,.32); }
-    .btn:active{ transform: translateY(0); }
-
-    /* Header / Hero */
-    header.hero{
-      position: relative; min-height: clamp(75vh, 80vh, 92vh); display:grid; place-items:center; isolation:isolate; overflow:hidden;
-    }
-    .hero::before{ /* background image layer */
-  content:""; position:absolute; inset:0; 
-  background: url('assets/hero.jpg') center/cover no-repeat; /* avoid 'fixed' in shorthand for mobile */
-  background-attachment: fixed; /* desktop parallax-style */
-  filter: brightness(.6) saturate(1.1) blur(3px);
-  transform: scale(1.03);
-}
-    .hero::after{ /* subtle vignette */
-  content:""; position:absolute; inset:0; background: radial-gradient(1000px 500px at 50% -10%, rgba(122,44,255,.18), transparent 60%),
-                                  radial-gradient(900px 600px at 10% 110%, rgba(255,61,110,.18), transparent 60%),
-                                  linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.65));
-  mix-blend-mode: screen; pointer-events: none;
-}
-
-    .hero-inner{ position:relative; z-index:1; width:100%; }
-    .hero-card{
-      max-width: 900px; margin-inline:auto; padding: clamp(20px, 3vw, 28px);
-      background: color-mix(in oklab, var(--bg-2), black 10%);
-      backdrop-filter: blur(6px) saturate(120%);
-      border: 1px solid rgba(255,255,255,.06);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow-lg);
-    }
-
-    h1{
-      font-size: clamp(40px, 8vw, 80px);
-      line-height: .95; margin: 0 0 .6rem 0; font-weight: 900; letter-spacing: .3px;
-    }
-    .subtitle{
-      font-size: clamp(16px, 2.2vw, 21px); color: var(--muted); margin: 0 0 1.2rem 0;
-    }
-
-    .hero-cta{ display:flex; gap:12px; flex-wrap:wrap; align-items:center; justify-content:center; margin-top: .6rem; }
-
-    /* Section titles */
-    .eyebrow{ color: var(--muted); text-transform: uppercase; font-size: .8rem; letter-spacing: .18em; }
-    .h2{ font-size: clamp(28px, 4.5vw, 44px); line-height:1.1; margin:.2rem 0 1rem; font-weight:800; }
-
-    /* What it is */
-    .card{
-      background: linear-gradient(180deg, rgba(255,255,255,.035), rgba(255,255,255,.02));
-      border: 1px solid rgba(255,255,255,.08);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow-md);
-      padding: clamp(18px, 2.5vw, 26px);
-    }
-
-    /* How it works bullets */
-    .steps{ display:grid; gap:16px; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); margin-top: 12px; }
-    .step{ position:relative; padding:20px; border-radius: 14px; background: rgba(255,255,255,.03); border:1px solid rgba(255,255,255,.07); overflow:hidden; isolation:isolate; }
-    .step b{ display:block; font-size:1.1rem; margin-bottom:.35rem; position:relative; z-index:1; }
-
-    /* watermark background for steps (use real <img> for reliability) */
-.step{ min-height: 220px; }
-.step .step-bg{ position:absolute; inset:0; width:100%; height:100%; object-fit:cover; opacity:.24; filter:saturate(1.1) contrast(1.05); z-index:0; pointer-events:none; }
-.step::after{ content:""; position:absolute; inset:0; background: linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.6)); z-index:0; }
-.step b, .step p{ position:relative; z-index:1; }
-
-/* Gallery */
-    .gallery{ display:grid; gap:14px; grid-template-columns: repeat(3, 1fr); }
-@media (max-width: 900px){ .gallery{ grid-template-columns: repeat(2, 1fr); } }
-@media (max-width: 560px){ .gallery{ grid-template-columns: 1fr; } }
-    .gallery figure{ position:relative; margin:0; overflow:hidden; border-radius: 14px; border:1px solid rgba(255,255,255,.08); background: #0e0e16; }
-    .gallery img{ width:100%; height: 280px; object-fit:cover; transition: transform .4s ease, filter .4s ease; will-change: transform; }
-    .gallery figure:hover img{ transform: scale(1.06); filter: saturate(1.15) contrast(1.05); }
-    .gallery figcaption{ position:absolute; inset:auto 8px 8px 8px; padding:4px 8px; font-size:.8rem; color:#e9eef5; background: rgba(0,0,0,.35); border:1px solid rgba(255,255,255,.08); border-radius: 999px; }
-
-    /* About the vibe */
-    .lead{ font-size: clamp(18px, 2.2vw, 20px); color: var(--muted); }
-
-    /* Footer */
-    footer{
-  padding: 28px 0 48px; color: var(--muted); border-top: 1px solid rgba(255,255,255,.08);
-  background: transparent;
-}
-    .footer-inner{ display:flex; gap:12px; flex-wrap:wrap; align-items:center; justify-content:space-between; }
-
-    /* Appear animations */
-    @keyframes floatIn {
-      from { opacity:0; transform: translateY(16px) scale(.98); }
-      to   { opacity:1; transform: translateY(0) scale(1); }
-    }
-    .reveal{ opacity:0; transform: translateY(16px); }
-    .reveal.in{ animation: floatIn .8s cubic-bezier(.2,.8,.2,1) forwards; }
-    .delay-1{ animation-delay: .08s; } .delay-2{ animation-delay: .16s; } .delay-3{ animation-delay: .24s; }
-
-/* Mobile & touch tweaks */
-@media (max-width: 900px){
-  .hero::before{ background-attachment: scroll; } /* iOS/Safari friendly */
-}
-@media (max-width: 560px){
-  .hero-card{ padding: 16px; }
-  .subtitle{ font-size: 16px; }
-  .hero-cta .btn{ width: 100%; }
-  .gallery img{ height: 220px; }
-  .step{ min-height: 200px; }
-}
-
-/* Reduced motion friendly */
-    @media (prefers-reduced-motion: reduce){
-      html{ scroll-behavior: auto; }
-      .btn, .gallery img{ transition: none; }
-      .reveal{ opacity:1; transform:none; animation:none; }
-    }
-  </style>
+  <link rel="stylesheet" href="css/theme.css" />
+  <link rel="stylesheet" href="css/landing.css" />
 </head>
 
 <body>
