feat: move CSS to assets/, use responsive WebP hero, replace H1 with logo, full-screen hero and no overlay; adjust logo size

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Live Karaoke Paris — Sing with a Live Band</title>
   <meta name="description" content="Live Karaoke Paris: sing your favorite songs with a live band in a fun, professional, nightlife atmosphere. Join the stage!" />
   <meta name="theme-color" content="#0b0b12" />
-  <link rel="stylesheet" href="css/theme.css" />
-  <link rel="stylesheet" href="css/landing.css" />
+  <link rel="stylesheet" href="assets/css/theme.css" />
+  <link rel="stylesheet" href="assets/css/landing.css" />
 </head>
 
 <body>
@@ -15,7 +15,9 @@
   <header class="hero" role="banner" aria-label="Live Karaoke Paris hero">
     <div class="hero-inner container">
       <div class="hero-card center stack reveal in">
-        <h1 class="neon-text">Live Karaoke Paris</h1>
+        <h1>
+          <img class="logo-img" src="assets/logo-full.svg" alt="Live Karaoke Paris" />
+        </h1>
         <p class="subtitle">Sing your favorite songs with a live band — and have fun with your friends on stage.</p>
         <div class="hero-cta" role="group" aria-label="Primary actions">
           <a class="btn" href="#photos">See photos</a>
