feat(ui): align palette with logo, add logo glow, improve What section, and restructure assets
- Palette: switch to periwinkle→lavender gradient to match logo; apply gradient to all H2 titles; adjust neon text glow; fix button contrast with dark text and updated shadows.
- Logo: replace H1 with SVG logo, add SVG Gaussian-blur neon glow + CSS drop-shadow fallback.
- Typography: use Versus Ultra for headings (with Josefin Sans fallback) and Montserrat for body; widen container to 1280px.
- Hero: full-viewport hero; background uses responsive WebP sources; removed glass overlay; increased logo size; inverted CTA button order.
- “What it is”: move title above both columns; left copy updated with bold emphasis; vertically center and pad text; larger, easier-to-read paragraph; right side is a scroll‑snap carousel with dots, autoplay (~3s), pause on hover/focus/touch, reduced‑motion safe; bug fix to prevent page scrolling on auto‑advance.
- Assets: move CSS to assets/css; add assets/js/what-carousel.js; create assets/photos/{hero,what,gallery} with updated paths; backup originals in assets/_originals; add assets/fonts/versus-ultra.otf.
- How it works: updated copy; removed button and emoji from steps.
- Gallery/steps: update image paths to assets/photos/*.

Co-authored-by: design system (palette + typography)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Live Karaoke Paris — Sing with a Live Band</title>
+  <title>Live Karaoke Paris</title>
   <meta name="description" content="Live Karaoke Paris: sing your favorite songs with a live band in a fun, professional, nightlife atmosphere. Join the stage!" />
   <meta name="theme-color" content="#0b0b12" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -21,10 +21,10 @@
         <h1>
           <img class="logo-img" src="assets/logo-full.svg" alt="Live Karaoke Paris" />
         </h1>
-        <p class="subtitle">Sing your favorite songs with a live band — and have fun with your friends on stage.</p>
+        <p class="subtitle">Are You Ready to Outshine The City of Light?</p>
         <div class="hero-cta" role="group" aria-label="Primary actions">
-          <a class="btn" href="#photos">See photos</a>
           <a class="btn" href="#what">What it is</a>
+          <a class="btn" href="#photos">See photos</a>
         </div>
       </div>
     </div>
@@ -35,13 +35,13 @@
     <section id="what" class="section" aria-labelledby="what-title">
       <div class="container">
         <p class="eyebrow">What it is</p>
-        <h2 id="what-title" class="h2 neon-text">An interactive live‑band karaoke night</h2>
+        <h2 id="what-title" class="h2 neon-text">Karaoke like never before</h2>
 
         <div class="what-grid">
           <div class="what-left reveal">
             <div class="stack">
               <p>
-                From student parties to Paris bars and private events, our format brings the thrill of singing with a live band. Every show is full of energy, unforgettable vibes — and a photographer ready to capture it all!
+                From <strong>international student parties</strong> to Paris bars and <strong>private events</strong>, our original format transforms <strong>karaoke</strong> into a <strong>full live-band experience</strong>, packed with unstoppable energy, <strong>unforgettable moments</strong>, and a <strong>photographer</strong> ready to capture every epic memory!
               </p>
             </div>
           </div>
@@ -71,18 +71,20 @@
         <div class="steps">
   <div class="step reveal delay-1" data-bg="choose">
     <img class="step-bg" src="assets/step-choose.jpg" alt="" aria-hidden="true" onerror="this.onerror=null; this.src='assets/photos/gallery/photo07.jpg';" />
-    <b>1) Choose a song</b>
-    <p>From Beatles & ABBA to Queen, Ed Sheeran, Bruno Mars, Lady Gaga, Billy Joel & more. <em>We love new requests—tell us your song!</em></p>
+    <b>1) Pick your song</b>
+    <p>From timeless classics to today’s hits — the choice is yours. Explore our full song list, find your anthem, and get ready to own the stage.</p>
+    
   </div>
   <div class="step reveal delay-2" data-bg="band">
     <img class="step-bg" src="assets/step-band.jpg" alt="" aria-hidden="true" onerror="this.onerror=null; this.src='assets/photos/gallery/photo03.jpg';" />
     <b>2) Join the band</b>
-    <p>We handle lyrics, cues, and key. You take the mic; we bring the groove.</p>
+    <p>Step into the spotlight with a professional live band behind you. We handle the music, the groove, the timing — you just grab the mic and feel the energy.</p>
+    
   </div>
   <div class="step reveal delay-3" data-bg="perform">
     <img class="step-bg" src="assets/step-perform.jpg" alt="" aria-hidden="true" onerror="this.onerror=null; this.src='assets/photos/gallery/photo01.jpg';" />
-    <b>3) Perform with the crowd</b>
-    <p>Lights on, friends cheering, a proper stage moment you’ll remember.</p>
+    <b>3) Make it unforgettable</b>
+    <p>Lights up, friends cheering, and a photographer capturing every moment. It’s more than karaoke — it’s a night in Paris that everyone will remember.</p>
   </div>
 </div>
 </div>
