Homepage updates: What overlay, How copy/size, Contact section, footer\n\n- What it is: larger desktop overlay height/padding and stronger blur\n- How it works: new title + copy; commented CTAs; bigger boxes and text\n- Contact: replaced vibe section, left-aligned text, larger lead, centered CTA\n- Footer: keep only copyright text\n- Minor spacing refinements (contact button spacing)

--- a/index.html
+++ b/index.html
@@ -35,28 +35,25 @@
     <section id="what" class="section" aria-labelledby="what-title">
       <div class="container">
         <p class="eyebrow">What it is</p>
-        <h2 id="what-title" class="h2 neon-text">Karaoke like never before</h2>
+        <h2 id="what-title" class="h2 neon-text">The Karaoke You Love.<br>Reinvented for the Stage.</h2>
 
-        <div class="what-grid">
-          <div class="what-left reveal">
-            <div class="stack">
-              <p>
-                From <strong>international student parties</strong> to Paris bars and <strong>private events</strong>, our original format transforms <strong>karaoke</strong> into a <strong>full live-band experience</strong>, packed with unstoppable energy, <strong>unforgettable moments</strong>, and a <strong>photographer</strong> ready to capture every epic memory!
-              </p>
+        <div class="what-hero">
+          <div class="carousel" id="what-carousel" aria-label="What it is photos">
+            <div class="track" role="region" aria-roledescription="carousel" aria-label="Photo carousel">
+              <figure class="slide"><img src="assets/photos/what/photo03.jpg" alt="" loading="lazy"></figure>
+              <figure class="slide"><img src="assets/photos/what/photo02.jpg" alt="" loading="lazy"></figure>
+              <figure class="slide"><img src="assets/photos/what/photo04.jpg" alt="" loading="lazy"></figure>
+              <figure class="slide"><img src="assets/photos/what/photo05.jpg" alt="" loading="lazy"></figure>
+              <figure class="slide"><img src="assets/photos/what/photo06.jpg" alt="" loading="lazy"></figure>
             </div>
+            <!-- dots removed intentionally -->
           </div>
 
-          <div class="what-right reveal">
-            <div class="carousel" id="what-carousel" aria-label="What it is photos">
-              <div class="track" tabindex="0" role="region" aria-roledescription="carousel" aria-label="Photo carousel">
-                <figure class="slide"><img src="assets/photos/what/photo01.jpg" alt="Live Karaoke Paris crowd and singer" loading="lazy"></figure>
-                <figure class="slide"><img src="assets/photos/what/photo02.jpg" alt="Band on stage with neon lights" loading="lazy"></figure>
-                <figure class="slide"><img src="assets/photos/what/photo03.jpg" alt="Singer performing" loading="lazy"></figure>
-                <figure class="slide"><img src="assets/photos/what/photo04.jpg" alt="Friends singing together" loading="lazy"></figure>
-                <figure class="slide"><img src="assets/photos/what/photo05.jpg" alt="Hands up in the crowd" loading="lazy"></figure>
-                <figure class="slide"><img src="assets/photos/what/photo06.jpg" alt="Close up on the mic and lights" loading="lazy"></figure>
-              </div>
-              <div class="dots" role="tablist" aria-label="Choose slide"></div>
+          <div class="what-overlay reveal">
+            <div class="stack">
+              <p>
+                Born in the <strong>student nights</strong> of the <strong>Cité Universitaire</strong> in Paris, our format grew through years of international parties into a <strong>citywide phenomenon</strong>. That’s when we transformed karaoke into a <strong>full live-band experience</strong>, packed with unstoppable energy and <strong>unforgettable moments captured forever</strong>!
+              </p>
             </div>
           </div>
         </div>
@@ -67,24 +64,24 @@
     <section id="how" class="section" aria-labelledby="how-title">
       <div class="container">
         <p class="eyebrow">How it works</p>
-        <h2 id="how-title" class="h2">It’s simple to jump on stage</h2>
+        <h2 id="how-title" class="h2">Get ready to<br>jump on stage.</h2>
         <div class="steps">
   <div class="step reveal delay-1" data-bg="choose">
-    <img class="step-bg" src="assets/step-choose.jpg" alt="" aria-hidden="true" onerror="this.onerror=null; this.src='assets/photos/gallery/photo07.jpg';" />
+    <img class="step-bg" src="assets/step-choose.jpg" alt="" aria-hidden="true" onerror="this.onerror=null; this.src='assets/photos/gallery/ADC_2427.webp';" />
     <b>1) Pick your song</b>
-    <p>From timeless classics to today’s hits — the choice is yours. Explore our full song list, find your anthem, and get ready to own the stage.</p>
-    
+    <p>From timeless classics to today’s hits — the stage is yours.</p>
+    <!-- <div class="step-cta"><a class="btn" href="#" aria-label="Browse our song list">BROWSE OUR SONG LIST</a></div> -->
   </div>
   <div class="step reveal delay-2" data-bg="band">
-    <img class="step-bg" src="assets/step-band.jpg" alt="" aria-hidden="true" onerror="this.onerror=null; this.src='assets/photos/gallery/photo03.jpg';" />
+    <img class="step-bg" src="assets/step-band.jpg" alt="" aria-hidden="true" onerror="this.onerror=null; this.src='assets/photos/gallery/ADC_1506.webp';" />
     <b>2) Join the band</b>
-    <p>Step into the spotlight with a professional live band behind you. We handle the music, the groove, the timing — you just grab the mic and feel the energy.</p>
-    
+    <p>We got your back. Grab the mic, we handle the rest.</p>
   </div>
   <div class="step reveal delay-3" data-bg="perform">
-    <img class="step-bg" src="assets/step-perform.jpg" alt="" aria-hidden="true" onerror="this.onerror=null; this.src='assets/photos/gallery/photo01.jpg';" />
+    <img class="step-bg" src="assets/step-perform.jpg" alt="" aria-hidden="true" onerror="this.onerror=null; this.src='assets/photos/gallery/ADC_1370.webp';" />
     <b>3) Make it unforgettable</b>
-    <p>Lights up, friends cheering, and a photographer capturing every moment. It’s more than karaoke — it’s a night in Paris that everyone will remember.</p>
+    <p>Lights, cheers, and every epic moment captured by our photographer.</p>
+    <!-- <div class="step-cta"><a class="btn" href="#photos" aria-label="Go to photo gallery">GET YOUR PHOTOS</a></div> -->
   </div>
 </div>
 </div>
@@ -94,57 +91,49 @@
     <section id="photos" class="section" aria-labelledby="photos-title">
       <div class="container">
         <p class="eyebrow">Photo gallery</p>
-        <h2 id="photos-title" class="h2">The vibe in pictures</h2>
+        <h2 id="photos-title" class="h2">Our Show, Your Spotlight</h2>
         <div class="gallery" role="list">
   <figure class="reveal" role="listitem">
-    <img src="assets/photos/gallery/photo01.jpg" alt="Singer on stage with live band" loading="lazy" />
-    <figcaption>Spotlight moments</figcaption>
+    <img src="assets/photos/gallery/ADC_1370.webp" alt="" loading="lazy" />
   </figure>
   <figure class="reveal delay-1" role="listitem">
-    <img src="assets/photos/gallery/photo02.jpg" alt="Crowd cheering with neon lights" loading="lazy" />
-    <figcaption>Crowd energy</figcaption>
+    <img src="assets/photos/gallery/ADC_1405.webp" alt="" loading="lazy" />
   </figure>
   <figure class="reveal delay-2" role="listitem">
-    <img src="assets/photos/gallery/photo03.jpg" alt="Guitarist and drummer on stage" loading="lazy" />
-    <figcaption>Live band</figcaption>
+    <img src="assets/photos/gallery/ADC_1448.webp" alt="" loading="lazy" />
   </figure>
   <figure class="reveal" role="listitem">
-    <img src="assets/photos/gallery/photo04.jpg" alt="Friends singing together" loading="lazy" />
-    <figcaption>Sing together</figcaption>
+    <img src="assets/photos/gallery/ADC_1506.webp" alt="" loading="lazy" />
   </figure>
   <figure class="reveal delay-1" role="listitem">
-    <img src="assets/photos/gallery/photo05.jpg" alt="Singer smiling with microphone" loading="lazy" />
-    <figcaption>All smiles</figcaption>
+    <img src="assets/photos/gallery/ADC_1530-2.webp" alt="" loading="lazy" />
   </figure>
   <figure class="reveal delay-2" role="listitem">
-    <img src="assets/photos/gallery/photo06.jpg" alt="Hands up in the crowd" loading="lazy" />
-    <figcaption>Hands up</figcaption>
+    <img src="assets/photos/gallery/ADC_2400.webp" alt="" loading="lazy" />
   </figure>
   <figure class="reveal" role="listitem">
-    <img src="assets/photos/gallery/photo07.jpg" alt="Neon lights over the stage" loading="lazy" />
-    <figcaption>Neon nights</figcaption>
+    <img src="assets/photos/gallery/ADC_2427.webp" alt="" loading="lazy" />
   </figure>
   <figure class="reveal delay-1" role="listitem">
-    <img src="assets/photos/gallery/photo08.jpg" alt="Singer and bassist sharing the groove" loading="lazy" />
-    <figcaption>Groove locked</figcaption>
+    <img src="assets/photos/gallery/ADC_2579.webp" alt="" loading="lazy" />
   </figure>
   <figure class="reveal delay-2" role="listitem">
-    <img src="assets/photos/gallery/photo09.jpg" alt="Close-up of microphone with lights" loading="lazy" />
-    <figcaption>Mic check</figcaption>
+    <img src="assets/photos/gallery/ADC_39.webp" alt="" loading="lazy" />
   </figure>
 </div>
 </div>
 </section>
 
-    <!-- ABOUT THE VIBE -->
-    <section id="vibe" class="section" aria-labelledby="vibe-title">
+    <!-- CONTACT US -->
+    <section id="contact" class="section" aria-labelledby="contact-title">
       <div class="container">
-        <p class="eyebrow">About the vibe</p>
-        <h2 id="vibe-title" class="h2">Fun, professional, participatory</h2>
-        <div class="card reveal">
-          <p class="lead">
-            Think nightlife energy with pro sound, tasteful lights, and a band that’s got your back. Whether you’re a first‑timer or a regular, you’ll feel welcome on stage—and hyped in the crowd. We keep it tight, playful, and always about the music.
-          </p>
+        <p class="eyebrow">Contact us</p>
+        <h2 id="contact-title" class="h2">Bring the Stage to Your Space</h2>
+        <p class="lead contact-lead reveal">
+          Looking to offer something unique for your guests? Our live-band karaoke experience turns any venue into a night to remember. Contact us to book or explore partnership opportunities.
+        </p>
+        <div class="contact-cta">
+          <a class="btn" href="mailto:contact@livekaraokeparis.com" aria-label="Contact Live Karaoke Paris by email">contact@livekaraokeparis.com</a>
         </div>
       </div>
     </section>
@@ -154,7 +143,6 @@
   <footer role="contentinfo">
     <div class="container footer-inner">
       <small>© <span id="year"></span> Live Karaoke Paris</small>
-      <a class="btn" href="mailto:contact@livekaraokeparis.com" aria-label="Contact Live Karaoke Paris by email">contact@livekaraokeparis.com</a>
     </div>
   </footer>
 
