Updated the photos from carrousel and gallery

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
         <div class="what-hero">
           <div class="carousel" id="what-carousel" aria-label="What it is photos">
             <div class="track" role="region" aria-roledescription="carousel" aria-label="Photo carousel">
-              <figure class="slide"><img src="assets/photos/what/photo03.jpg" alt="" loading="lazy"></figure>
-              <figure class="slide"><img src="assets/photos/what/photo02.jpg" alt="" loading="lazy"></figure>
-              <figure class="slide"><img src="assets/photos/what/photo04.jpg" alt="" loading="lazy"></figure>
-              <figure class="slide"><img src="assets/photos/what/photo05.jpg" alt="" loading="lazy"></figure>
-              <figure class="slide"><img src="assets/photos/what/photo06.jpg" alt="" loading="lazy"></figure>
+              <figure class="slide"><img src="assets/photos/what/ADC_129.webp" alt="" loading="lazy"></figure>
+              <figure class="slide"><img src="assets/photos/what/ADC_146.webp" alt="" loading="lazy"></figure>
+              <figure class="slide"><img src="assets/photos/what/ADC_152.webp" alt="" loading="lazy"></figure>
+              <figure class="slide"><img src="assets/photos/what/ADC_1506.webp" alt="" loading="lazy"></figure>
+              <figure class="slide"><img src="assets/photos/what/ADC_201.webp" alt="" loading="lazy"></figure>
             </div>
             <!-- dots removed intentionally -->
           </div>
@@ -91,7 +91,7 @@
     <section id="how" class="section" aria-labelledby="how-title">
       <div class="container">
         <p class="eyebrow">How it works</p>
-        <h2 id="how-title" class="h2">Get ready to<br>jump on stage.</h2>
+        <h2 id="how-title" class="h2">Get Ready<br>To Jump on Stage.</h2>
         <div class="steps">
   <div class="step reveal delay-1" data-bg="choose">
     <img class="step-bg" src="assets/step-choose.jpg" alt="" aria-hidden="true" onerror="this.onerror=null; this.src='assets/photos/gallery/ADC_2427.webp';" />
@@ -118,7 +118,7 @@
     <section id="photos" class="section" aria-labelledby="photos-title">
       <div class="container">
         <p class="eyebrow">Photo gallery</p>
-        <h2 id="photos-title" class="h2">Our Show, Your Spotlight</h2>
+        <h2 id="photos-title" class="h2">Our Show,<br>Your Spotlight</h2>
         <div class="gallery" role="list">
   <figure class="reveal" role="listitem">
     <img src="assets/photos/gallery/ADC_1370.webp" alt="" loading="lazy" />
@@ -130,22 +130,22 @@
     <img src="assets/photos/gallery/ADC_1448.webp" alt="" loading="lazy" />
   </figure>
   <figure class="reveal" role="listitem">
-    <img src="assets/photos/gallery/ADC_1506.webp" alt="" loading="lazy" />
+    <img src="assets/photos/gallery/ADC_1530.webp" alt="" loading="lazy" />
   </figure>
   <figure class="reveal delay-1" role="listitem">
-    <img src="assets/photos/gallery/ADC_1530-2.webp" alt="" loading="lazy" />
-  </figure>
-  <figure class="reveal delay-2" role="listitem">
     <img src="assets/photos/gallery/ADC_2400.webp" alt="" loading="lazy" />
   </figure>
-  <figure class="reveal" role="listitem">
+  <figure class="reveal delay-2" role="listitem">
     <img src="assets/photos/gallery/ADC_2427.webp" alt="" loading="lazy" />
   </figure>
-  <figure class="reveal delay-1" role="listitem">
+  <figure class="reveal" role="listitem">
     <img src="assets/photos/gallery/ADC_2579.webp" alt="" loading="lazy" />
   </figure>
-  <figure class="reveal delay-2" role="listitem">
+  <figure class="reveal delay-1" role="listitem">
     <img src="assets/photos/gallery/ADC_39.webp" alt="" loading="lazy" />
+  </figure>
+  <figure class="reveal delay-2" role="listitem">
+    <img src="assets/photos/gallery/photo06.webp" alt="" loading="lazy" />
   </figure>
 </div>
 </div>
