Updated "What it is" Text

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div class="what-overlay reveal">
             <div class="stack">
               <p>
-                Born in the <strong>student nights</strong> of the <strong>Cité Universitaire</strong> in Paris, our format grew through years of international parties into a <strong>citywide phenomenon</strong>. That’s when we transformed karaoke into a <strong>full live-band experience</strong>, packed with unstoppable energy and <strong>unforgettable moments captured forever</strong>!
+                Born in the <strong>student nights</strong> of the <strong>Cité Universitaire</strong> in Paris, our format grew through years of international parties into a <strong>citywide phenomenon</strong>. Out of this journey came a <strong>unique idea</strong>: transforming karaoke into a <strong>full live-band experience</strong>, packed with unstoppable energy and <strong>unforgettable moments captured forever</strong>!
               </p>
             </div>
           </div>
